bk_ida/gccida/g2/compare_constant_1
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compare_constant_1/src/varasm.c:3117:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compare_constant_1/src/varasm.c:3122:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+10h] [rbp-50h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compare_constant_1/src/varasm.c:3247:20: error: expected expression
v22 = ( tree_node *)high[4]; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compare_constant_1/src/varasm.c:3247:9: error: use of undeclared identifier 'tree_node'
v22 = ( tree_node *)high[4]; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compare_constant_1/src/varasm.c:3312:7: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
v11 = lang_hooks_0.expand_constant( elements); 
      ^~~~~~~~~~~~
      lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compare_constant_1/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compare_constant_1/src/varasm.c:3312:35: error: called object type '<dependent type>' is not a function or function pointer
v11 = lang_hooks_0.expand_constant( elements); 
                                  ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compare_constant_1/src/obj/varasm.o] Error 1
